# Tongy-Agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: 01_basic_usage.py  02_tools_demo.py  03_mcp_integration.py  04_skills_demo.py  05_subagent_demo.py  06_memory_demo.py  README.md
scripts/: setup.sh  view_trace.py
tests/: __init__.py  test_integration.py  test_llm.py  test_memory.py  test_sandbox.py  test_tools.py
tongy_agent/: __init__.py  agent.py  cli.py  config.py  http_tracer.py  logger.py  memory.py  retry.py  sandbox.py
tongy_agent/config/: config-example.yaml  config.yaml  system_prompt.md
tongy_agent/llm/: __init__.py  base.py  glm_client.py
tongy_agent/schema/: __init__.py  schema.py
tongy_agent/subagent/: __init__.py  base.py  manager.py
tongy_agent/subagent/predefined/: __init__.py  code_agent.py
tongy_agent/tools/: __init__.py  base.py  bash_tool.py  file_tools.py  mcp_loader.py  skill_loader.py  todo_tool.py
tongy_agent/utils/: __init__.py
